fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Nova chave API",
+  "Delete": "Apagar",
   "Revoke": "Revogar",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Revogar token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.",
   "Restore": "Restaurar",
   "Collection restored": "Collection restored",
-  "Delete": "Apagar",
   "Delete collection": "Apagar coleção",
   "New template": "Novo template",
   "Delete comment": "Eliminar comentário",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Todos no espaço de trabalho",
   "{{ count }} member": "{{ count }} membro",
   "{{ count }} member_plural": "{{ count }} membros",
+  "Only lowercase letters, digits and dashes allowed": "Apenas letras minúsculas, dígitos e traços permitidos",
+  "Sorry, this link has already been used": "Desculpe, esta ligação já foi utilizada",
+  "Public link copied to clipboard": "Ligação pública copiada para a área de transferência",
+  "Web": "Internet",
+  "Allow anyone with the link to access": "Permitir que qualquer um com a ligação aceda",
+  "Publish to internet": "Publicar na Internet",
+  "Search engine indexing": "Search engine indexing",
+  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Convidar",
   "{{ userName }} was added to the collection": "{{ userName }} foi adicionado à coleção",
   "{{ count }} people added to the collection": "{{ count }} pessoas adicionadas à coleção",
   "{{ count }} people added to the collection_plural": "{{ count }} pessoas adicionadas às coleções",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} pessoas e {{ count2 }} grupos adicionados à coleção",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} utilizadores e {{ count2 }} grupos adicionados à coleção",
+  "Switch to dark": "Alterar para escuro",
+  "Switch to light": "Alterar para claro",
   "Add": "Adicionar",
   "Add or invite": "Adicionar ou convidar",
   "Viewer": "Leitor",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Ativo <1></1> atrás",
   "Never signed in": "Nunca conectado",
   "Leave": "Sair",
-  "Only lowercase letters, digits and dashes allowed": "Apenas letras minúsculas, dígitos e traços permitidos",
-  "Sorry, this link has already been used": "Desculpe, esta ligação já foi utilizada",
-  "Public link copied to clipboard": "Ligação pública copiada para a área de transferência",
-  "Web": "Internet",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Qualquer pessoa com a ligação pode aceder porque o documento principal, <2>{{documentTitle}}</2>, está partilhado",
-  "Allow anyone with the link to access": "Permitir que qualquer um com a ligação aceda",
-  "Publish to internet": "Publicar na Internet",
-  "Search engine indexing": "Search engine indexing",
-  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Subdocumentos não são compartilhados. Altere a partilha para ativar o acesso, este será o comportamento por defeito no futuro",
   "{{ userName }} was added to the document": "{{ userName }} adicionado ao documento",
   "{{ count }} people added to the document": "{{ count }} pessoa adicionada ao documento",
@@ -571,6 +575,7 @@
   "Share link revoked": "Link de partilha foi revogado",
   "Share link copied": "Link de partilha foi copiado",
   "Share options": "Opções de partilha",
+  "Go to collection": "Go to collection",
   "Go to document": "Ir para documento",
   "Revoke link": "Revogar link",
   "Contents": "Conteúdo",
@@ -670,8 +675,6 @@
   "Show contents": "Mostrar conteúdo",
   "available when headings are added": "disponível quando adicionar cabeçalhos",
   "Edit {{noun}}": "Editar {{noun}}",
-  "Switch to dark": "Alterar para escuro",
-  "Switch to light": "Alterar para claro",
   "Archived": "Arquivado",
   "Save draft": "Guardar rascunho",
   "Done editing": "Edição concluída",
@@ -713,7 +716,6 @@
   "Backlinks": "Ligações ascendentes",
   "Close": "Fechar",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} está a usar {{ appName }} para partilhar documentos, entre para continuar.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Tem certeza que quer eliminar o template {{ documentTitle }}?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Tem certeza? Apagar o documento <em>{{ documentTitle }}</em> apagará todo o seu histórico</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Tem certeza? Apagar o documento <em>{{ documentTitle }}</em> apagará todo o seu histórico e </em>{{ any }} subdocumento</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Convidado",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Partilhado por",
   "Date shared": "Data da partilha",
   "Last accessed": "Acessado pela última vez",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Pode criar modelos para ajudar a sua equipa a criar documentação consistente e precisa.",
   "Alphabetical": "Alfabético",
   "There are no templates just yet.": "Ainda não existem modelos.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} está a usar {{ appName }} para partilhar documentos, entre para continuar.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Um código de confirmação foi enviado para o seu endereço de e-mail, por favor introduza o código abaixo para eliminar permanentemente a área de trabalho.",
   "Confirmation code": "Código de confirmação",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Excluir área de trabalho  <1>{{workspaceName}}</1> eliminará todas as coleções, documentos, utilizadores, e dados associados. Será desligado imediatamente do {{appName}}.",
