fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Ny API-nyckel",
+  "Delete": "Radera",
   "Revoke": "Återkalla",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Återkalla token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.",
   "Restore": "Återställ",
   "Collection restored": "Collection restored",
-  "Delete": "Radera",
   "Delete collection": "Ta bort samling",
   "New template": "Ny mall",
   "Delete comment": "Radera kommentar",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Alla i arbetsytan",
   "{{ count }} member": "{{ count }} medlem",
   "{{ count }} member_plural": "{{ count }} medlemmar",
+  "Only lowercase letters, digits and dashes allowed": "Endast små bokstäver, siffror och bindestreck tillåts",
+  "Sorry, this link has already been used": "Tyvärr, denna länk har redan använts",
+  "Public link copied to clipboard": "Offentlig länk har kopierats till urklipp",
+  "Web": "Webb",
+  "Allow anyone with the link to access": "Tillåt vem som helst med länken att komma åt",
+  "Publish to internet": "Publicera på internet",
+  "Search engine indexing": "Search engine indexing",
+  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Bjud in",
   "{{ userName }} was added to the collection": "{{ userName }} har lagts till i samlingen",
   "{{ count }} people added to the collection": "{{ count }} personer tillagda i samlingen",
   "{{ count }} people added to the collection_plural": "{{ count }} personer tillagda i samlingen",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} personer och {{ count2 }} grupper tillagda i samlingen",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} personer och {{ count2 }} grupper tillagda i samlingarna",
+  "Switch to dark": "Växla till mörkt",
+  "Switch to light": "Växla till ljust",
   "Add": "Lägg till",
   "Add or invite": "Lägg till eller bjud in",
   "Viewer": "Läsare",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Aktiv för <1></1> sedan",
   "Never signed in": "Aldrig inloggad",
   "Leave": "Lämna",
-  "Only lowercase letters, digits and dashes allowed": "Endast små bokstäver, siffror och bindestreck tillåts",
-  "Sorry, this link has already been used": "Tyvärr, denna länk har redan använts",
-  "Public link copied to clipboard": "Offentlig länk har kopierats till urklipp",
-  "Web": "Webb",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Alla med länken kan komma åt eftersom det överordnade dokumentet, <2>{{documentTitle}}</2>, delas",
-  "Allow anyone with the link to access": "Tillåt vem som helst med länken att komma åt",
-  "Publish to internet": "Publicera på internet",
-  "Search engine indexing": "Search engine indexing",
-  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Nästlade dokument delas inte på internet. Aktivera delning för att möjliggöra åtkomst, detta kommer att vara standardbeteendet i framtiden",
   "{{ userName }} was added to the document": "{{ userName }} was added to the document",
   "{{ count }} people added to the document": "{{ count }} people added to the document",
@@ -571,6 +575,7 @@
   "Share link revoked": "Delningslänk återkallad",
   "Share link copied": "Delningslänken är kopierad",
   "Share options": "Delningsalternativ",
+  "Go to collection": "Go to collection",
   "Go to document": "Gå till dokument",
   "Revoke link": "Återkalla länk",
   "Contents": "Innehåll",
@@ -670,8 +675,6 @@
   "Show contents": "Visa innehåll",
   "available when headings are added": "tillgänglig när rubriker läggs till",
   "Edit {{noun}}": "Redigera {{noun}}",
-  "Switch to dark": "Växla till mörkt",
-  "Switch to light": "Växla till ljust",
   "Archived": "Arkiverad",
   "Save draft": "Spara utkast",
   "Done editing": "Redigering klar",
@@ -713,7 +716,6 @@
   "Backlinks": "Bakåtlänkar",
   "Close": "Stäng",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} använder {{ appName }} för att dela dokument, logga in för att fortsätta.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Är du säker på att du vill ta bort mallen <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Är du säker på det? Ta bort <em>{{ documentTitle }}</em> dokumentet kommer att ta bort all dess historik</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Är du säker på det? Borttagning av <em>{{ documentTitle }}</em> dokumentet kommer att ta bort all dess historik och <em>{{ any }} nested document</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Gäst",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Delad av",
   "Date shared": "Datum delat",
   "Last accessed": "Senast besökt",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Du kan skapa mallar för att hjälpa ditt team att skapa en konsekvent och korrekt dokumentation.",
   "Alphabetical": "Alfabetiskt",
   "There are no templates just yet.": "Det finns inga mallar ännu.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} använder {{ appName }} för att dela dokument, logga in för att fortsätta.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "En bekräftelsekod har skickats till din e-postadress, ange koden nedan för att permanent förstöra denna arbetsyta.",
   "Confirmation code": "Bekräftelsekod",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Om du tar bort arbetsytan <1>{{workspaceName}}</1> kommer alla samlingar, dokument, användare och tillhörande data att förstöras. Du kommer omedelbart att loggas ut från {{appName}}.",
