--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Новий ключ API",
+  "Delete": "Видалити",
   "Revoke": "Відкликати",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Відкликати токен",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Архівування цієї колекції також архівує всі документи в ній. Документи з колекції більше не будуть видимі в результатах пошуку.",
   "Restore": "Відновити",
   "Collection restored": "Колекцію відновлено",
-  "Delete": "Видалити",
   "Delete collection": "Видалити колекцію",
   "New template": "Новий шаблон",
   "Delete comment": "Видалити коментар",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Усі у робочому середовищі",
   "{{ count }} member": "{{ count }} учасник",
   "{{ count }} member_plural": "{{ count }} учасників",
+  "Only lowercase letters, digits and dashes allowed": "Допускаються тільки маленькі літери, цифри і дефіси",
+  "Sorry, this link has already been used": "Вибачте, це посилання вже використано",
+  "Public link copied to clipboard": "Публічне посилання скопійовано в буфер обміну",
+  "Web": "Веб",
+  "Allow anyone with the link to access": "Дозволити будь-кому з посиланням для доступу",
+  "Publish to internet": "Опублікувати в інтернеті",
+  "Search engine indexing": "Індексація пошуковою системою",
+  "Disable this setting to discourage search engines from indexing the page": "Вимкніть цей параметр, щоб заборонити пошуковій системі індексувати сторінку",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Запросити",
   "{{ userName }} was added to the collection": "{{ userName }} додано до колекції",
   "{{ count }} people added to the collection": "{{ count }} people added to the collection",
   "{{ count }} people added to the collection_plural": "{{ count }} people added to the collection",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} people and {{ count2 }} groups added to the collection",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} people and {{ count2 }} groups added to the collection",
+  "Switch to dark": "Увімкнути темну тему",
+  "Switch to light": "Увімкнути світлу тему",
   "Add": "Додати",
   "Add or invite": "Додати або запросити",
   "Viewer": "Переглядач",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Активний <1></1> тому",
   "Never signed in": "Ніколи не авторизувався",
   "Leave": "Вихід",
-  "Only lowercase letters, digits and dashes allowed": "Допускаються тільки маленькі літери, цифри і дефіси",
-  "Sorry, this link has already been used": "Вибачте, це посилання вже використано",
-  "Public link copied to clipboard": "Публічне посилання скопійовано в буфер обміну",
-  "Web": "Веб",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Будь-хто з посиланням може отримати доступ, оскільки батьківський документ <2>{{documentTitle}}</2>, поширює",
-  "Allow anyone with the link to access": "Дозволити будь-кому з посиланням для доступу",
-  "Publish to internet": "Опублікувати в інтернеті",
-  "Search engine indexing": "Індексація пошуковою системою",
-  "Disable this setting to discourage search engines from indexing the page": "Вимкніть цей параметр, щоб заборонити пошуковій системі індексувати сторінку",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Вкладені документи не поширюються в інтернеті. Ввімкніть спільний доступ для доступу, це буде типовою поведінкою в майбутньому",
   "{{ userName }} was added to the document": "{{ userName }} було додано до документа",
   "{{ count }} people added to the document": "{{ count }} people added to the document",
@@ -571,6 +575,7 @@
   "Share link revoked": "Посилання для спільного доступу скасовано",
   "Share link copied": "Посилання скопійоване",
   "Share options": "Параметри спільного використання",
+  "Go to collection": "Go to collection",
   "Go to document": "Перейти до документа",
   "Revoke link": "Відкликати посилання",
   "Contents": "Зміст",
@@ -670,8 +675,6 @@
   "Show contents": "Показати вміст",
   "available when headings are added": "available when headings are added",
   "Edit {{noun}}": "Редагувати {{noun}}",
-  "Switch to dark": "Увімкнути темну тему",
-  "Switch to light": "Увімкнути світлу тему",
   "Archived": "Заархівовано",
   "Save draft": "Save draft",
   "Done editing": "Done editing",
@@ -713,7 +716,6 @@
   "Backlinks": "Зворотні посилання",
   "Close": "Закрити",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} використовує {{ appName }} для обміну документами, увійдіть, щоб продовжити.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Ви впевнені, що хочете видалити шаблон <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Ви впевнені в цьому? Видалення документа <em>{{ documentTitle }}</em> призведе до видалення всієї його історії</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Ви впевнені в цьому? Видалення документа <em>{{ documentTitle }}</em> призведе до видалення всієї його історії та <em>{{ any }} вкладених документів</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Гість",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Поділився",
   "Date shared": "Дата публікації",
   "Last accessed": "Останній доступ",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Ви можете створювати шаблони, щоб допомогти вашій команді створювати послідовну та точну документацію.",
   "Alphabetical": "За алфавітом",
   "There are no templates just yet.": "Шаблонів поки що немає.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} використовує {{ appName }} для обміну документами, увійдіть, щоб продовжити.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Код підтвердження надіслано на вашу електронну пошту. Введіть код в поле нижче, щоб назавжди видалити цей робочий простір.",
   "Confirmation code": "Код підтвердження",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.",
