fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "新建 API 密钥",
+  "Delete": "删除",
   "Revoke": "吊销",
   "Revoke API key": "吊销 API 密钥",
   "Revoke token": "吊销 token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "归档此文档集也将归档其中的所有文档。该文档集中的文档将不再在搜索结果中可见。",
   "Restore": "恢复",
   "Collection restored": "文档集已恢复",
-  "Delete": "删除",
   "Delete collection": "删除文档集",
   "New template": "新建模板",
   "Delete comment": "删除评论",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "工作区中的所有人",
   "{{ count }} member": "{{ count }} 位成员",
   "{{ count }} member_plural": "{{ count }} 位成员",
+  "Only lowercase letters, digits and dashes allowed": "只允许使用小写字母、数字和破折号",
+  "Sorry, this link has already been used": "抱歉，该链接已被占用",
+  "Public link copied to clipboard": "公开链接已复制到剪贴板",
+  "Web": "网页",
+  "Allow anyone with the link to access": "允许所有知道链接的人访问",
+  "Publish to internet": "发布到互联网",
+  "Search engine indexing": "搜索引擎索引",
+  "Disable this setting to discourage search engines from indexing the page": "禁用此设置以阻止搜索引擎对该页建立索引",
+  "Show last modified": "显示最后修改",
+  "Display the last modified timestamp on the shared page": "在分享页面上显示最后修改的时间戳",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "邀请",
   "{{ userName }} was added to the collection": "{{ userName }} 已添加到文档集",
   "{{ count }} people added to the collection": "已添加 {{ count }} 人到文档集中",
   "{{ count }} people added to the collection_plural": "已添加 {{ count }} 人到文档集中",
   "{{ count }} people and {{ count2 }} groups added to the collection": "已添加 {{ count }} 人和 {{ count2 }} 组到文档集中",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "已添加 {{ count }} 人和 {{ count2 }} 组到文档集中",
+  "Switch to dark": "切换至深色",
+  "Switch to light": "切换至浅色",
   "Add": "添加",
   "Add or invite": "添加或邀请",
   "Viewer": "浏览者",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": " <1></1> 前活跃",
   "Never signed in": "从未登录",
   "Leave": "离开",
-  "Only lowercase letters, digits and dashes allowed": "只允许使用小写字母、数字和破折号",
-  "Sorry, this link has already been used": "抱歉，该链接已被占用",
-  "Public link copied to clipboard": "公开链接已复制到剪贴板",
-  "Web": "网页",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "知道该链接的任何人都可以访问，因为父级文档 <2>{{documentTitle}}</2> 已共享",
-  "Allow anyone with the link to access": "允许所有知道链接的人访问",
-  "Publish to internet": "发布到互联网",
-  "Search engine indexing": "搜索引擎索引",
-  "Disable this setting to discourage search engines from indexing the page": "禁用此设置以阻止搜索引擎对该页建立索引",
-  "Show last modified": "显示最后修改",
-  "Display the last modified timestamp on the shared page": "在分享页面上显示最后修改的时间戳",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "嵌套文档不会在网页上共享。切换共享以启用访问，这将是未来的默认行为。",
   "{{ userName }} was added to the document": "{{ userName }} 已被添加到此文档",
   "{{ count }} people added to the document": "{{ count }} 个人被添加到此文档",
@@ -571,6 +575,7 @@
   "Share link revoked": "此分享链接已被撤销",
   "Share link copied": "分享链接已复制",
   "Share options": "分享选项",
+  "Go to collection": "Go to collection",
   "Go to document": "转到文档",
   "Revoke link": "撤消链接",
   "Contents": "目录",
@@ -670,8 +675,6 @@
   "Show contents": "显示内容",
   "available when headings are added": "当添加标题时可用",
   "Edit {{noun}}": "编辑 {{noun}}",
-  "Switch to dark": "切换至深色",
-  "Switch to light": "切换至浅色",
   "Archived": "已归档",
   "Save draft": "保存草稿",
   "Done editing": "保存编辑",
@@ -713,7 +716,6 @@
   "Backlinks": "反向链接",
   "Close": "关闭",
   "This document is large which may affect performance": "此文档较大，可能会影响性能",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} 正在使用 {{ appName }} 共享文档，请登录以继续。",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "确认删除 <em>{{ documentTitle }}</em> 文档模板？",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "你确定吗？删除 <em>{{ documentTitle }}</em> 文档将一并清除其所有历史记录</em>。",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "你确定吗？删除文档 <em>{{ documentTitle }}</em> 将一并删除其所有历史记录与其包含的 <em>{{ any }} 份子文档</em>。",
@@ -1004,6 +1006,7 @@
   "Guest": "访客",
   "Never used": "从未被使用过",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "你确定要删除应用 {{ appName }} 吗？此操作不可被撤回。",
+  "Title": "Title",
   "Shared by": "共享自",
   "Date shared": "分享日期",
   "Last accessed": "上次访问",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "创建模板来帮助你的团队创建风格一致和准确的文档。",
   "Alphabetical": "按字母顺序排列",
   "There are no templates just yet.": "尚无可用模板。",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} 正在使用 {{ appName }} 共享文档，请登录以继续。",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "验证码已经发送至你的电子邮箱，请在下面输入代码以永久销毁此工作区。",
   "Confirmation code": "验证码",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "删除 <1>{{workspaceName}}</1> 工作区将销毁所有文档集、文档、用户和关联数据。 您将立即登出 {{appName}}。",
