--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "新 API 金鑰",
+  "Delete": "刪除",
   "Revoke": "撤銷",
   "Revoke API key": "Revoke API key",
   "Revoke token": "撤銷權杖",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "封存此文件集將會一併封存其中的所有文件。已封存的文件將不再顯示於搜尋結果中。",
   "Restore": "還原",
   "Collection restored": "文件集已復原",
-  "Delete": "刪除",
   "Delete collection": "刪除文件集",
   "New template": "新增範本",
   "Delete comment": "刪除評論",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "工作區裡的所有人",
   "{{ count }} member": "{{ count }} 位成員",
   "{{ count }} member_plural": "{{ count }} 位成員",
+  "Only lowercase letters, digits and dashes allowed": "只允許使用小寫字母、數字和破折號",
+  "Sorry, this link has already been used": "抱歉，此連結已被使用",
+  "Public link copied to clipboard": "已將連結複製到剪貼簿",
+  "Web": "網頁",
+  "Allow anyone with the link to access": "允許任何知道該連結的人訪問",
+  "Publish to internet": "發佈到互聯網",
+  "Search engine indexing": "搜索引擎索引",
+  "Disable this setting to discourage search engines from indexing the page": "停用此設定可阻止搜尋引擎為此頁面建立索引。",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "邀請",
   "{{ userName }} was added to the collection": "{{ userName }} 已經被新增到文件集",
   "{{ count }} people added to the collection": "{{ count }} 人已經被新增到文件集",
   "{{ count }} people added to the collection_plural": "{{ count }} 人已經被新增到文件集",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} 人以及 {{ count2 }} 個群組已經被新增到文件集",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} 人以及 {{ count2 }} 個群組已經被新增到文件集",
+  "Switch to dark": "切換到深色模式",
+  "Switch to light": "切換到淺色模式",
   "Add": "新增",
   "Add or invite": "新增或邀請",
   "Viewer": "檢視者",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "最後活動於 <1></1> 前",
   "Never signed in": "從未登入",
   "Leave": "離開",
-  "Only lowercase letters, digits and dashes allowed": "只允許使用小寫字母、數字和破折號",
-  "Sorry, this link has already been used": "抱歉，此連結已被使用",
-  "Public link copied to clipboard": "已將連結複製到剪貼簿",
-  "Web": "網頁",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "任何擁有連結的人都可以存取，因為父文件 <2>{{ documentTitle}}</2> 是共享的。",
-  "Allow anyone with the link to access": "允許任何知道該連結的人訪問",
-  "Publish to internet": "發佈到互聯網",
-  "Search engine indexing": "搜索引擎索引",
-  "Disable this setting to discourage search engines from indexing the page": "停用此設定可阻止搜尋引擎為此頁面建立索引。",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "巢狀文件不會在網路上共用。切換共享以啟用訪問，這會成為未來的預設行為",
   "{{ userName }} was added to the document": "{{ userName }} 已新增至此文件",
   "{{ count }} people added to the document": "{{ count }} 人已新增至此文件",
@@ -571,6 +575,7 @@
   "Share link revoked": "分享連結已註銷",
   "Share link copied": "分享網址已複製",
   "Share options": "共享設定",
+  "Go to collection": "Go to collection",
   "Go to document": "跳轉到文件",
   "Revoke link": "註銷連結",
   "Contents": "目錄",
@@ -670,8 +675,6 @@
   "Show contents": "顯示目錄內容",
   "available when headings are added": "新增標題後有效",
   "Edit {{noun}}": "編輯 {{noun}}",
-  "Switch to dark": "切換到深色模式",
-  "Switch to light": "切換到淺色模式",
   "Archived": "已封存",
   "Save draft": "儲存草稿",
   "Done editing": "編輯完成",
@@ -713,7 +716,6 @@
   "Backlinks": "反向連結",
   "Close": "關閉",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} 正在使用 {{ appName }} 分享文件，請登入以繼續。",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "您確定要刪除 <em>{{ documentTitle }}</em> 範本嗎？",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "你確定嗎？刪除 <em>{{ documentTitle }}</em> 文件將刪除其所有歷史記錄</em>。",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "您確定要這麼做嗎？將文件 <em>{{ documentTitle }}</em> 刪除同時也會刪除所有它的歷史紀錄以及 <em>{{ any }} 所屬的子文件</em>。",
@@ -1004,6 +1006,7 @@
   "Guest": "訪客",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "分享自",
   "Date shared": "分享日期",
   "Last accessed": "最近存取",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "您可以建立文件範本來幫助團隊建立一致且準確的文件。",
   "Alphabetical": "依照字母",
   "There are no templates just yet.": "目前還沒有任何文件範本。",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} 正在使用 {{ appName }} 分享文件，請登入以繼續。",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "確認碼已發送至您的電子郵件，請輸入確認碼以永久地刪除這個工作區。",
   "Confirmation code": "驗證碼",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "刪除<1>{{workspaceName}}</1>工作區會刪除所有文件集，文件，使用者，以及相關資料。您會立即從{{appName}} 登出。",
