--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Người tham gia không gian làm việc",
   "{{ count }} member": "{{$count}} Thành viên",
   "{{ count }} member_plural": "{{$count}} Thành viên",
+  "Only lowercase letters, digits and dashes allowed": "Chỉ cho phép chữ thường, chữ số và dấu gạch ngang",
+  "Sorry, this link has already been used": "Xin lỗi, liên kết này đã được sử dụng",
+  "Public link copied to clipboard": "Public link copied to clipboard",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Allow anyone with the link to access",
+  "Publish to internet": "Đăng tải lên internet",
+  "Search engine indexing": "Search engine indexing",
+  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
+  "Show last modified": "Hiện lần sửa cuối",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Mời",
   "{{ userName }} was added to the collection": "{{ userName }} đã được thêm vào bộ sưu tập",
   "{{ count }} people added to the collection": "{{ count }} người đã được thêm vào bộ sưu tập",
   "{{ count }} people added to the collection_plural": "{{ count }} người đã được thêm vào bộ sưu tập",
   "{{ count }} people and {{ count2 }} groups added to the collection": "đã thêm {{ count }} người và {{ count2 }} nhóm vào bộ sưu tập",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "đã thêm {{ count }} người và {{ count2 }} nhóm vào bộ sưu tập",
+  "Switch to dark": "Chuyển sang Dark",
+  "Switch to light": "Chuyển sang Light",
   "Add": "Thêm",
   "Add or invite": "Thêm hoặc gửi lời mời",
   "Viewer": "Người xem",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Hoạt động <1></1> trước kia",
   "Never signed in": "Chưa bao giờ đăng nhập",
   "Leave": "Thoát",
-  "Only lowercase letters, digits and dashes allowed": "Chỉ cho phép chữ thường, chữ số và dấu gạch ngang",
-  "Sorry, this link has already been used": "Xin lỗi, liên kết này đã được sử dụng",
-  "Public link copied to clipboard": "Public link copied to clipboard",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared",
-  "Allow anyone with the link to access": "Allow anyone with the link to access",
-  "Publish to internet": "Đăng tải lên internet",
-  "Search engine indexing": "Search engine indexing",
-  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
-  "Show last modified": "Hiện lần sửa cuối",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future",
   "{{ userName }} was added to the document": "{{ userName }} đã được thêm vào tài liệu",
   "{{ count }} people added to the document": "{{ count }} người đã được thêm vào tài liệu",
@@ -571,6 +575,7 @@
   "Share link revoked": "Đã thu hồi Link chia sẻ",
   "Share link copied": "Đã sao chép Link chia sẻ",
   "Share options": "Tùy chọn chia sẻ",
+  "Go to collection": "Go to collection",
   "Go to document": "Đi đến tài liệu",
   "Revoke link": "Gỡ bỏ Link",
   "Contents": "Nội Dung",
@@ -670,8 +675,6 @@
   "Show contents": "Hiển thị nội dung",
   "available when headings are added": "available when headings are added",
   "Edit {{noun}}": "Chỉnh sửa {{noun}}",
-  "Switch to dark": "Chuyển sang Dark",
-  "Switch to light": "Chuyển sang Light",
   "Archived": "Đã lưu trữ",
   "Save draft": "Save draft",
   "Done editing": "Done editing",
@@ -713,7 +716,6 @@
   "Backlinks": "Liên kết ngược",
   "Close": "Đóng",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} đang sử dụng {{ appName }} để chia sẻ tài liệu, vui lòng đăng nhập để tiếp tục.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Bạn có chắc chắn muốn xóa mẫu <em>{{ documentTitle }}</em> không?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Bạn có chắc chắn không? Xóa văn bản <em>{{ documentTitle }}</em> sẽ xóa tất cả lịch sử của nó</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Bạn có chắc chắn về điều đó không? Xóa tài liệu <em>{{ documentTitle }}</em> sẽ xóa tất cả lịch sử của nó và <em>{{ any }} tài liệu lồng nhau</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Guest",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Shared by",
   "Date shared": "Ngày chia sẻ",
   "Last accessed": "Truy nhập lần cuối",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Bạn có thể tạo các mẫu để giúp nhóm của mình tạo tài liệu nhất quán và chính xác.",
   "Alphabetical": "Bảng chữ cái",
   "There are no templates just yet.": "Không có mẫu nào được nêu ra.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} đang sử dụng {{ appName }} để chia sẻ tài liệu, vui lòng đăng nhập để tiếp tục.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.",
   "Confirmation code": "Confirmation code",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.",
