fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Nova chave de API",
+  "Delete": "Excluir",
   "Revoke": "Revogar",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Revogar token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Arquivar esta coleção também irá arquivar todos os documentos dentro dela. Documentos da coleção não serão mais visíveis nos resultados de pesquisa.",
   "Restore": "Restaurar",
   "Collection restored": "Coleção restaurada",
-  "Delete": "Excluir",
   "Delete collection": "Excluir a coleção",
   "New template": "Novo modelo",
   "Delete comment": "Excluir comentário",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Todos no espaço de trabalho",
   "{{ count }} member": "{{ count }} membro",
   "{{ count }} member_plural": "{{ count }} membros",
+  "Only lowercase letters, digits and dashes allowed": "Somente letras minúsculas, dígitos e travessões são permitidos",
+  "Sorry, this link has already been used": "Desculpe, este link já foi utilizado",
+  "Public link copied to clipboard": "Link público copiado para área de transferência",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Permitir qualquer pessoa com o link acessar",
+  "Publish to internet": "Publicar na internet",
+  "Search engine indexing": "Indexação de motor de busca",
+  "Disable this setting to discourage search engines from indexing the page": "Desativar essa configuração para desencorajar os motores de busca de indexar a página",
+  "Show last modified": "Mostrar última modificação",
+  "Display the last modified timestamp on the shared page": "Exibir horário da última modificação na página compartilhada",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Convite",
   "{{ userName }} was added to the collection": "{{ userName }} foi adicionado à coleção",
   "{{ count }} people added to the collection": "{{ count }} pessoas adicionadas à coleção",
   "{{ count }} people added to the collection_plural": "{{ count }} pessoas adicionadas à coleção",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} pessoas e {{ count2 }} grupos adicionados à coleção",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} pessoas e {{ count2 }} grupos adicionados à coleção",
+  "Switch to dark": "Alterar para escuro",
+  "Switch to light": "Alternar para claro",
   "Add": "Adicionar",
   "Add or invite": "Adicionar ou convidar",
   "Viewer": "Visualizador",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Ativo <1></1> atrás",
   "Never signed in": "Nunca logou",
   "Leave": "Sair",
-  "Only lowercase letters, digits and dashes allowed": "Somente letras minúsculas, dígitos e travessões são permitidos",
-  "Sorry, this link has already been used": "Desculpe, este link já foi utilizado",
-  "Public link copied to clipboard": "Link público copiado para área de transferência",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Qualquer pessoa com o link pode acessar, pois, o documento principal, <2>{{documentTitle}}</2>, está compartilhado",
-  "Allow anyone with the link to access": "Permitir qualquer pessoa com o link acessar",
-  "Publish to internet": "Publicar na internet",
-  "Search engine indexing": "Indexação de motor de busca",
-  "Disable this setting to discourage search engines from indexing the page": "Desativar essa configuração para desencorajar os motores de busca de indexar a página",
-  "Show last modified": "Mostrar última modificação",
-  "Display the last modified timestamp on the shared page": "Exibir horário da última modificação na página compartilhada",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Documentos aninhados não são compartilhados na web. Ative o compartilhamento para ativar o acesso, este será o comportamento padrão no futuro",
   "{{ userName }} was added to the document": "{{ userName }} foi adicionado ao documento",
   "{{ count }} people added to the document": "{{ count }} pessoas foram adicionadas ao documento",
@@ -571,6 +575,7 @@
   "Share link revoked": "Link de compartilhamento revogado",
   "Share link copied": "Link de compartilhamento copiado",
   "Share options": "Opções de compartilhamento",
+  "Go to collection": "Go to collection",
   "Go to document": "Ir para o documento",
   "Revoke link": "Revogar link",
   "Contents": "Conteúdo",
@@ -670,8 +675,6 @@
   "Show contents": "Exibir conteúdo",
   "available when headings are added": "disponível quando cabeçalhos são adicionados",
   "Edit {{noun}}": "Editar {{noun}}",
-  "Switch to dark": "Alterar para escuro",
-  "Switch to light": "Alternar para claro",
   "Archived": "Arquivado",
   "Save draft": "Salvar rascunho",
   "Done editing": "Edição concluída",
@@ -713,7 +716,6 @@
   "Backlinks": "Links de referência",
   "Close": "Fechar",
   "This document is large which may affect performance": "Este documento é grande o que pode afetar a performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} Está usando {{ appName }} para compartilhar documentos, por favor, inicie a sessão para continuar.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Tem certeza de que deseja excluir o modelo <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Você tem certeza disso? Excluir o documento <em>{{ documentTitle }}</em> excluirá todo o seu histórico</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Você tem certeza sobre isso? Excluir o documento <em>{{ documentTitle }}</em> excluirá todo o seu histórico e <em>{{ any }} documento aninhado</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Visitante",
   "Never used": "Nunca utilizado",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Tem certeza de que deseja excluir a aplicação {{ appName }} ? Isso não pode ser desfeito.",
+  "Title": "Title",
   "Shared by": "Compartilhado por",
   "Date shared": "Data de compartilhamento",
   "Last accessed": "Último acessado",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Você pode criar modelos para ajudar sua equipe a criar documentação consistente e precisa.",
   "Alphabetical": "Alfabética",
   "There are no templates just yet.": "Ainda não há modelos.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} Está usando {{ appName }} para compartilhar documentos, por favor, inicie a sessão para continuar.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Um código de confirmação foi enviado para seu endereço de e-mail, por favor insira o código abaixo para destruir permanentemente este espaço de trabalho.",
   "Confirmation code": "Código de confirmação",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Excluindo o espaço de trabalho <1>{{workspaceName}}</1> destruirá todas as coleções, documentos, usuários e dados associados. Você será desconectado imediatamente do {{appName}}.",
