--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "New API key",
+  "Delete": "Hapus",
   "Revoke": "Cabut",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Cabut token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.",
   "Restore": "Memulihkan",
   "Collection restored": "Collection restored",
-  "Delete": "Hapus",
   "Delete collection": "Hapus koleksi",
   "New template": "Templat baru",
   "Delete comment": "Hapus komentar",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Everyone in the workspace",
   "{{ count }} member": "{{ count }} anggota",
   "{{ count }} member_plural": "{{ count }} anggota",
+  "Only lowercase letters, digits and dashes allowed": "Hanya huruf kecil, angka, dan tanda hubung diperbolehkan",
+  "Sorry, this link has already been used": "Maaf, tautan ini telah digunakan",
+  "Public link copied to clipboard": "Public link copied to clipboard",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Allow anyone with the link to access",
+  "Publish to internet": "Terbitkan ke internet",
+  "Search engine indexing": "Search engine indexing",
+  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Invite",
   "{{ userName }} was added to the collection": "{{ userName }} ditambahkan ke koleksi",
   "{{ count }} people added to the collection": "{{ count }} people added to the collection",
   "{{ count }} people added to the collection_plural": "{{ count }} people added to the collection",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} people and {{ count2 }} groups added to the collection",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} people and {{ count2 }} groups added to the collection",
+  "Switch to dark": "Beralih ke gelap",
+  "Switch to light": "Beralih ke cerah",
   "Add": "Tambahkan",
   "Add or invite": "Add or invite",
   "Viewer": "Viewer",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Aktif <1></1> yang lalu",
   "Never signed in": "Tidak pernah masuk",
   "Leave": "Meninggalkan",
-  "Only lowercase letters, digits and dashes allowed": "Hanya huruf kecil, angka, dan tanda hubung diperbolehkan",
-  "Sorry, this link has already been used": "Maaf, tautan ini telah digunakan",
-  "Public link copied to clipboard": "Public link copied to clipboard",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared",
-  "Allow anyone with the link to access": "Allow anyone with the link to access",
-  "Publish to internet": "Terbitkan ke internet",
-  "Search engine indexing": "Search engine indexing",
-  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future",
   "{{ userName }} was added to the document": "{{ userName }} was added to the document",
   "{{ count }} people added to the document": "{{ count }} people added to the document",
@@ -571,6 +575,7 @@
   "Share link revoked": "Tautan berbagi dicabut",
   "Share link copied": "Tautan berbagi disalin",
   "Share options": "Opsi bagikan",
+  "Go to collection": "Go to collection",
   "Go to document": "Menuju ke dokumen",
   "Revoke link": "Lepas tautan",
   "Contents": "Isi",
@@ -670,8 +675,6 @@
   "Show contents": "Tampilkan isi",
   "available when headings are added": "available when headings are added",
   "Edit {{noun}}": "Sunting {{noun}}",
-  "Switch to dark": "Beralih ke gelap",
-  "Switch to light": "Beralih ke cerah",
   "Archived": "Diarsipkan",
   "Save draft": "Save draft",
   "Done editing": "Done editing",
@@ -713,7 +716,6 @@
   "Backlinks": "Tautan balik",
   "Close": "Menutup",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} menggunakan {{ appName }} untuk berbagi dokumen, silakan login untuk melanjutkan.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Anda yakin ingin menghapus templat <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Apakah Anda yakin? Menghapus dokumen <em>{{ documentTitle }}</em> akan menghapus semua riwayatnya</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Apakah Anda yakin? Menghapus dokumen <em>{{ documentTitle }}</em> akan menghapus semua riwayatnya dan <em>{{ any }} dokumen bersarang</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Guest",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Shared by",
   "Date shared": "Tanggal dibagikan",
   "Last accessed": "Terakhir diakses",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Anda dapat membuat template untuk membantu tim Anda membuat dokumentasi yang konsisten dan akurat.",
   "Alphabetical": "Alfabetis",
   "There are no templates just yet.": "Belum ada template.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} menggunakan {{ appName }} untuk berbagi dokumen, silakan login untuk melanjutkan.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.",
   "Confirmation code": "Confirmation code",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.",
