--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "کلید API جدید",
+  "Delete": "حذف",
   "Revoke": "Revoke",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Revoke token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.",
   "Restore": "بازیابی",
   "Collection restored": "ایجاد مجموعه",
-  "Delete": "حذف",
   "Delete collection": "حذف مجموعه",
   "New template": "قالب جدید",
   "Delete comment": "حذف نظر",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Everyone in the workspace",
   "{{ count }} member": "{{ count }} member",
   "{{ count }} member_plural": "{{ count }} members",
+  "Only lowercase letters, digits and dashes allowed": "Only lowercase letters, digits and dashes allowed",
+  "Sorry, this link has already been used": "Sorry, this link has already been used",
+  "Public link copied to clipboard": "Public link copied to clipboard",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Allow anyone with the link to access",
+  "Publish to internet": "انتشار روی اینترنت",
+  "Search engine indexing": "Search engine indexing",
+  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "دعوت",
   "{{ userName }} was added to the collection": "{{ userName }} به مجموعه اضافه شد",
   "{{ count }} people added to the collection": "{{ count }} به مجموعه اضافه شد",
   "{{ count }} people added to the collection_plural": "{{ count }} به مجموعه اضافه شد",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} people and {{ count2 }} groups added to the collection",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} people and {{ count2 }} groups added to the collection",
+  "Switch to dark": "تغییر به تیره",
+  "Switch to light": "تغییر به روشن",
   "Add": "افزودن",
   "Add or invite": "Add or invite",
   "Viewer": "ناظر",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "فعال در <1></1> پیش",
   "Never signed in": "تاکنون وارد نشده است",
   "Leave": "Leave",
-  "Only lowercase letters, digits and dashes allowed": "Only lowercase letters, digits and dashes allowed",
-  "Sorry, this link has already been used": "Sorry, this link has already been used",
-  "Public link copied to clipboard": "Public link copied to clipboard",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared",
-  "Allow anyone with the link to access": "Allow anyone with the link to access",
-  "Publish to internet": "انتشار روی اینترنت",
-  "Search engine indexing": "Search engine indexing",
-  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future",
   "{{ userName }} was added to the document": "{{ userName }} was added to the document",
   "{{ count }} people added to the document": "{{ count }} people added to the document",
@@ -571,6 +575,7 @@
   "Share link revoked": "پیوند اشتراک‌گذاری حذف شد",
   "Share link copied": "پیوند اشتراک‌گذاری کپی شد",
   "Share options": "گزینه‌های اشتراک‌گذاری",
+  "Go to collection": "Go to collection",
   "Go to document": "رفتن به سند",
   "Revoke link": "حذف پیوند",
   "Contents": "محتوا",
@@ -670,8 +675,6 @@
   "Show contents": "نمایش محتوا",
   "available when headings are added": "available when headings are added",
   "Edit {{noun}}": "ویرایش {{noun}}",
-  "Switch to dark": "تغییر به تیره",
-  "Switch to light": "تغییر به روشن",
   "Archived": "بایگانی شده",
   "Save draft": "Save draft",
   "Done editing": "Done editing",
@@ -713,7 +716,6 @@
   "Backlinks": "Backlinks",
   "Close": "Close",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} is using {{ appName }} to share documents, please login to continue.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "آیا مطئمن هستید که قالب <em>{{ documentTitle }}</em> را حذف نمایید؟",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Guest",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Shared by",
   "Date shared": "Date shared",
   "Last accessed": "آخرین دسترسی",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "با ساخت قالب‌ها به تیم خود کمک می‌کنید که مستنداتی سازگار و درست ایجاد کنند.",
   "Alphabetical": "الفبایی",
   "There are no templates just yet.": "هنوز هیچ قالبی وجود ندارد.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} is using {{ appName }} to share documents, please login to continue.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.",
   "Confirmation code": "Confirmation code",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.",
