fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -336,7 +336,7 @@
   "Disable this setting to discourage search engines from indexing the page": "Deaktivieren Sie diese Einstellung, um Suchmaschinen davon abzuhalten, die Seite zu indizieren",
   "Show last modified": "Änderungsdatum anzeigen",
   "Display the last modified timestamp on the shared page": "Zeige das Änderungsdatum auf der geteilten Seite",
-  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
+  "All documents in this collection will be shared on the web, including any new documents added later": "Alle Dokumente in dieser Sammlung werden im Internet geteilt. Dies schließt neue Dokumente ein, die später hinzugefügt werden",
   "Invite": "Einladen",
   "{{ userName }} was added to the collection": "{{ userName }} wurde zur Sammlung hinzugefügt",
   "{{ count }} people added to the collection": "{{ count }} Personen zur Kollektion hinzugefügt",
@@ -370,7 +370,7 @@
   "Never signed in": "Nie angemeldet",
   "Leave": "Verlassen",
   "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
-  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Jeder mit dem Link kann darauf zugreifen, da das übergeordnete Dokument, <2>{sharedParent.sourceTitle}</2>, geteilt wird",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Verschachtelte Dokumente werden nicht im Web geteilt. Schalten Sie die Freigabe um, um den Zugriff zu ermöglichen, dies wird das Standardverhalten in Zukunft sein",
   "{{ userName }} was added to the document": "{{ userName }} wurde dem Dokument hinzugefügt",
   "{{ count }} people added to the document": "{{ count }} Personen zu dem Dokument eingeladen",
@@ -575,7 +575,7 @@
   "Share link revoked": "Freigabelink widerrufen",
   "Share link copied": "Freigabelink wurde kopiert",
   "Share options": "Teilen-Einstellungen",
-  "Go to collection": "Go to collection",
+  "Go to collection": "Gehe zur Sammlung",
   "Go to document": "Zum Dokument gehen",
   "Revoke link": "Link widerrufen",
   "Contents": "Inhalte",
@@ -916,7 +916,7 @@
   "Application published": "Anwendung veröffentlicht",
   "Application updated": "Anwendung aktualisiert",
   "Client secret rotated": "Secret rotieren",
-  "Rotate secret": "Rotate secret",
+  "Rotate secret": "Geheimen Schlüssel rotieren",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Das Rotieren des Client-Secrets macht das aktuelle Secret ungültig. Stellen Sie sicher, dass Sie alle Anwendungen, die diese Zugangsdaten verwenden, entsprechend aktualisieren.",
   "Displayed to users when authorizing": "Wird den Benutzern bei der Autorisierung angezeigt",
   "Developer information shown to users when authorizing": "Entwicklerinformationen, die den Benutzern bei der Autorisierung angezeigt werden",
@@ -927,7 +927,7 @@
   "OAuth client ID": "OAuth-Client-ID",
   "The public identifier for this app": "Der öffentliche Identifikator für diese App",
   "OAuth client secret": "OAuth Client Secret",
-  "Store this value securely, do not expose it publicly": "Store this value securely, do not expose it publicly",
+  "Store this value securely, do not expose it publicly": "Speichern Sie diesen Wert sicher ab und stellen Sie ihn nicht öffentlich zur Verfügung",
   "Where users are redirected after authorizing this app": "Wohin Benutzer nach der Autorisierung dieser App weitergeleitet werden",
   "Authorization URL": "Autorisierungs-URL",
   "Where users are redirected to authorize this app": "Wohin Benutzer weitergeleitet werden, um diese App zu autorisieren",
@@ -1006,7 +1006,7 @@
   "Guest": "Gast",
   "Never used": "Niemals verwendet",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Sind Sie sicher, dass Sie die {{ appName }}-Anwendung löschen möchten? Dies kann nicht rückgängig gemacht werden.",
-  "Title": "Title",
+  "Title": "Titel",
   "Shared by": "Geteilt durch",
   "Date shared": "Datum geteilt",
   "Last accessed": "Letzter Zugriff",
