fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Quitter le document",
   "You have left the shared document": "Vous avez quitté le document partagé",
   "Could not leave document": "Impossible de quitter le document",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Accueil",
   "Drafts": "Brouillons",
   "Search": "Recherche",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Les collections n'ont pas pu être chargées, veuillez recharger la page",
   "Start view": "Page d'accueil",
   "Install now": "Installer maintenant",
+  "Disconnect": "Se déconnecter",
+  "Disconnecting": "Déconnexion en cours",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Collection supprimée",
   "Untitled": "Sans titre",
   "Unpin": "Désépingler",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Voulez-vous vraiment supprimer le jeton {{ tokenName }}?",
   "Disconnect integration": "Déconnecter l'intégration",
   "Connected": "Connecté",
-  "Disconnect": "Se déconnecter",
-  "Disconnecting": "Déconnexion en cours",
   "Allowed domains": "Domaines autorisés",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domaines autorisés à créer de nouveaux comptes en utilisant le SSO. La modification de ce paramètre n'affecte pas les comptes d'utilisateurs existants.",
   "Remove domain": "Supprimer le domaine",
