fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Abandonar documento",
   "You have left the shared document": "Has abandonado el documento compartido",
   "Could not leave document": "No se pudo abandonar el documento",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Inicio",
   "Drafts": "Borradores",
   "Search": "Buscar",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "No se pudieron cargar las colecciones, por favor recarga la aplicación",
   "Start view": "Vista inicial",
   "Install now": "Instalar ahora",
+  "Disconnect": "Desconectar",
+  "Disconnecting": "Desconectando",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Colección Eliminada",
   "Untitled": "Sin título",
   "Unpin": "Desfijar",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "¿Estás seguro de que quieres revocar el token {{ tokenName }}?",
   "Disconnect integration": "Desconectar integración",
   "Connected": "Conectado",
-  "Disconnect": "Desconectar",
-  "Disconnecting": "Desconectando",
   "Allowed domains": "Dominios permitidos",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Los dominios que deberían poder crear nuevas cuentas usando SSO. Cambiar esta configuración no afecta a las cuentas de usuario existentes.",
   "Remove domain": "Eliminar dominio",
